fixed notch issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,6 @@
     html {
         font-family: 'Raleway', sans-serif; 
         min-width: 390px;
+        background-color: black;
     }
 }
